# openhouse

./: .gitignore  .gitmodules  404.html  AGENTS.md  ARCHITECTURE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  LICENSE  NOTICE  README.md  SECURITY.md  SETUP.md  alter_table_update_storagelocation.sh  build.gradle  create-and-update-sl.sh  create-table.sh  demo-check.sh  demo-setup.sh  demo-step.sh  demo-storage-location.sh  demo.md  demo.sh  docusaurus.config.js  gradle.properties  housetables-service.Dockerfile  index.html  insert-data.sh  jobs-scheduler.Dockerfile  jobs-service.Dockerfile  local-spark-sql.sh  optimizer-analyzer.Dockerfile  optimizer-scheduler.Dockerfile  optimizer-service.Dockerfile  package-lock.json  package.json  rollback-table.sh  run.sh  settings.gradle  (+5 more)
.github/: dependabot.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report_template.md  bug_report_template.yaml  docs_template.md  feature_request_template.md  feature_request_template.yaml  openhouse_rfc  openhouse_rfc.yml  request_for_comments_template.md
.github/workflows/: build-gradle-openhouse.yml  build-run-tests.yml  build-tag-publish.yml  build-test-pr.yml  dataloader-tests.yml  deploy.yml  pr-validations.yml  publish-docker-image.yml  python-lint.yml  python-release.yml  renovate.yml  tag-openhouse.yml  test-deploy.yml
all-modules/: build.gradle
apps/optimizer/: build.gradle
apps/optimizer-analyzer/: build.gradle
apps/optimizer-scheduler/: build.gradle
apps/spark/: build.gradle
apps/spark-3.5/: build.gradle
assets/css/: styles.02e1c83f.css  styles.11ce2044.css  styles.3640ef21.css  styles.63a075b6.css  styles.715918a6.css  styles.870c4d24.css  styles.d6823838.css
assets/js/: 01a85c17.28a026f7.js  01a85c17.a1c6744e.js  026085c5.7ae4fb9a.js  026085c5.9c5659a4.js  03685665.de152f4e.js  0e384e19.1ae28d22.js  0e384e19.1fa53ec9.js  0e384e19.3dbef68b.js  0e384e19.6a4b773e.js  0e384e19.aab8cbe3.js  0e384e19.c9257521.js  1135.53d58aa7.js  1135.583cc80d.js  148fa977.77b764d0.js  148fa977.cc4b769d.js  14eb3368.292e3d7a.js  14eb3368.2b002e15.js  16285003.b143f4cc.js  17896441.21bfd39d.js  17896441.3f44a7bb.js  17896441.cd1b28fa.js  1908c090.51175b03.js  1908c090.e7dc4c55.js  19e6b04b.06412e3b.js  19e6b04b.7be42317.js  19e6b04b.88ab4674.js  19e6b04b.af3848ca.js  19e6b04b.c61fb0cc.js  1af294fc.1118f0e3.js  1af294fc.64c58868.js  1af294fc.780eac25.js  1b5933b0.2677491d.js  1b5933b0.da654092.js  1f391b9e.d80b46ff.js  20417f73.0253a3c5.js  245bbb68.23474f9c.js  245bbb68.440cf8e8.js  36a45a48.46c99f2c.js  36a45a48.78b9abb4.js  36a45a48.bddb9550.js  (+163 more)
blog/: 2023-07-19-introduction-oh.mdx  2024-03-04-opensourcing-oh.mdx  atom.xml  index.html  rss.xml
blog/archive/: index.html
blog/introduction-oh/: index.html
blog/opensourcing-oh/: index.html
blog/tags/: index.html
bug-bash-wap/: QUICKSTART.md  README.md  TEMPLATE.md  assignments.md  collect-results.sh  create-new-tests.sh  create-test-files.sh  spark-shell-command.sh  start-testing.sh  test-details.md
bug-bash-wap/results/: java-08-rohit.md  java-09-selena.md  java-1-abhishek.md  java-10-shanthoosh.md  java-11-simbarashe.md  java-12-aastha.md  java-13-jiefan.md  java-14-zhe.md  java-15-kevin.md  java-16-junhao.md  java-17-ruolin.md  java-2-daniel.md  java-3-vikram.md  java-4-william.md  java-5-christian.md  java-6-stas.md  java-7-levi.md  sql-08-rohit.md  sql-09-selena.md  sql-1-abhishek.md  sql-10-shanthoosh.md  sql-11-simbarashe.md  sql-12-aastha.md  sql-13-jiefan.md  (+10 more)
buildSrc/: build.gradle
common/: build.gradle
docs/: README.md  docusaurus.config.js  getting_started.md  getting_started.mdx  intro.md  package-lock.json  sidebars.js
integrations/python/dataloader/: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  datafusion_pushdown_demo.py  pyproject.toml  sqlglot_pushdown_demo.py
integrations/python/dataloader/rust/: exec.rs  lib.rs  provider.rs
integrations/python/dataloader/scripts/: iceberg_rest_catalog_smoke.py  test_load_table_local.py
integrations/python/dataloader/src/openhouse/: __init__.py
integrations/python/dataloader/src/openhouse/dataloader/: __init__.py  _exceptions.py  _filter_converter.py  _iceberg_scan_delegate.py  _jvm.py  _observability.py  _pushdown.py  _query_builder.py  _table_scan_context.py  _timer.py  catalog.py  data_loader.py  data_loader_split.py  data_loader_splits.py  datafusion_dialect.py  datafusion_sql.py  exceptions.py  filters.py  openhouse_table_catalog.py  planner.py  scan_optimizer.py  sql_translator.py  table_catalog.py  table_identifier.py  table_transformer.py  udf_registry.py  worker.py
integrations/python/dataloader/src/openhouse/dataloader/metrics/: __init__.py
integrations/python/dataloader/tests/: Dockerfile  __init__.py  integration_test_catalog.py  integration_tests.py  shiv_preamble.py  test_arrival_order.py  test_catalog.py  test_data_loader.py  test_data_loader_split.py  test_datafusion_dialect.py  test_datafusion_sql.py  test_filter_converter.py  test_filters.py  test_jvm.py  test_metrics.py  test_observability.py  test_openhouse_table_catalog.py  test_planner.py  test_pushdown.py  test_scan_optimizer.py  test_table_catalog.py  test_transform_batch_size_regression.py  test_transform_execution_batch_size.py
markdown-page/: index.html
redocusaurus/: jobs-openapi-spec-json.yaml  tables-openapi-spec-json.yaml
replication-poc/: CHECKLIST.md  NOTES.md  PLAN.md
scripts/: enable-hdfs-debug.sh  run_openhouse_auth_cli.sh  spec_update.sh
spec/: openhouse-iceberg-rest-readonly-v1.yaml
specs/: README.md  housetables.md  jobs.json  jobs.md  tables.json
tables-test-fixtures/: build.gradle
tables-test-fixtures-iceberg-1.5/: build.gradle
(+1683 files in other folders)
